experiement_output/error_log/nondex-atomfrede-gradle-crowdin-cli-plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1377/wd/NonDex-plugin-test/github.com/atomfrede/gradle-crowdin-cli-plugin/src/main/java/io/github/atomfrede/gradle/plugins/crowdincli/task/download/CrowdinCliDownloadTask.java:11: error: getTimeout() in Download cannot implement getTimeout() in Task
public class CrowdinCliDownloadTask extends Download {
       ^
  return type int is not compatible with Property<Duration>
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1377/wd/NonDex-plugin-test/github.com/atomfrede/gradle-crowdin-cli-plugin/src/main/java/io/github/atomfrede/gradle/plugins/crowdincli/task/crowdin/download/CrowdinDownload.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 20s
